--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             font-family: 'Noto Sans JP', sans-serif;
             line-height: 1.6;
             color: #333;
-            background-color: #fff; /* 背景白（印刷用） */
+            background-color: #fff;
             margin: 0;
             padding: 40px;
         }
@@ -34,7 +34,7 @@
             margin-top: 40px;
             font-size: 20px;
             color: #1e40af;
-            page-break-after: avoid; /* 見出しの後で改ページしない */
+            page-break-after: avoid;
         }
         h3 {
             margin-top: 25px;
@@ -55,7 +55,7 @@
             padding: 20px;
             border-radius: 8px;
             margin-bottom: 20px;
-            page-break-inside: avoid; /* ボックス内で改ページしない */
+            page-break-inside: avoid;
         }
         .step-title {
             font-weight: bold;
@@ -72,12 +72,14 @@
             border-radius: 4px;
             display: inline-block;
         }
-        .highlight-box {
-            border: 2px solid #fca5a5;
-            background-color: #fff1f2;
+        .tab-guide {
+            background-color: #f0fdf4;
+            border: 2px solid #86efac;
             padding: 15px;
             border-radius: 6px;
-            margin-top: 10px;
+            margin-bottom: 20px;
+            color: #15803d;
+            font-weight: bold;
         }
         .column-guide {
             display: grid;
@@ -124,20 +126,18 @@
             font-size: 14px;
             color: #666;
         }
-        
-        /* 印刷時の設定 */
         @media print {
             body { padding: 0; }
             .container { width: 100%; max-width: none; }
             h2 { -webkit-print-color-adjust: exact; print-color-adjust: exact; }
-            .step-box, .col-item, .highlight-box { -webkit-print-color-adjust: exact; print-color-adjust: exact; }
+            .step-box, .col-item, .tab-guide { -webkit-print-color-adjust: exact; print-color-adjust: exact; }
         }
     </style>
 </head>
 <body>
 
     <div class="container">
-        <div style="text-align: right; font-size: 12px; color: #666; margin-bottom: 10px;">最終更新日: 2025/11/28</div>
+        <div style="text-align: right; font-size: 12px; color: #666; margin-bottom: 10px;">最終更新日: 2025/11/30</div>
         <h1>店舗運用マニュアル</h1>
 
         <p>この度は「自動求人システム」をご導入いただきありがとうございます。<br>
@@ -145,9 +145,9 @@
 
         <h2>1. システムでできること</h2>
         <ul>
-            <li><strong>ファーストアクション</strong>：友達追加されると自動であいさつメッセージを送信します。</li>
-            <li><strong>自動台帳作成</strong>：応募者の情報がGoogleスプレッドシートに勝手に溜まります。</li>
-            <li><strong>ドタキャン防止</strong>：面接当日の2時間前に、応募者へ自動で確認LINEを送ります。</li>
+            <li><strong>ファーストアクション</strong>：友達追加されると自動であいさつメッセージを送信し、スムーズなやり取りを開始します。</li>
+            <li><strong>自動台帳作成</strong>：応募者の情報がGoogleスプレッドシートに勝手に溜まり、管理の手間を省きます。</li>
+            <li><strong>ドタキャン防止</strong>：面接当日の2時間前に、応募者へ自動で確認LINEを送り、確実な面接実施をサポートします。</li>
         </ul>
 
         <h2>2. 日々の運用フロー（これだけやればOK！）</h2>
@@ -158,31 +158,37 @@
             また、LINEのトーク内に「面接希望」と応募者からのメッセージが届きますので確認をしてください。
         </div>
 
+        <div class="tab-guide">
+            💡 ポイント：スプレッドシートの「タブ」を確認！<br>
+            シートの下部に「在籍応募」と「出稼ぎ応募」のタブがあります。<br>
+            応募の種類によって自動で振り分けられますので、切り替えてご確認ください。
+        </div>
+
         <div class="step-box">
             <span class="step-title">STEP 2：応募者と日程調整する</span>
-            第一希望、第二希望で店舗様の都合が合わない場合、直接トーク内で日程を調整してください。
+            第一希望、第二希望で店舗様の都合が合わない場合、直接LINEトーク内で日程を調整してください。
         </div>
 
         <div class="step-box" style="border-color: #ef4444; background-color: #fff5f5;">
             <span class="step-title" style="color: #dc2626;">STEP 3：確定日時を入力する（★最重要）</span>
             面接日時が決まったら、必ずスプレッドシートの<br>
-            <strong>「I列（確定日）」</strong>と<strong>「J列（確定時間）」</strong>に入力してください。<br>
+            <strong>「確定日」</strong>と<strong>「確定時間」</strong>の列に入力してください。<br>
             <br>
             <span class="important">※ここに入力しないと、リマインドLINEが送信されません！</span>
         </div>
 
         <h2>3. スプレッドシートの入力ルール</h2>
-        <p>管理シートの各列（項目）の説明です。</p>
+        <p>管理シートの右側にある、管理用項目の説明です。</p>
 
         <div class="column-guide">
             <div class="col-item">
-                <span class="col-name">A〜H列（応募者情報）</span>
+                <span class="col-name">応募者情報（左側の列）</span>
                 自動で入力されます。触らなくてOKです。
             </div>
             
             <!-- ここを強調 -->
             <div class="col-item" style="background-color: #fff7ed; border: 2px solid #f97316;">
-                <span class="col-name" style="color: #c2410c;">I列（確定日） ★重要</span>
+                <span class="col-name" style="color: #c2410c;">確定日 ★重要</span>
                 ここを<strong style="color: #dc2626; font-size: 1.2em; text-decoration: underline;">必ずダブルクリック</strong>して<br>
                 カレンダーを開いてください。<br>
                 <br>
@@ -190,13 +196,13 @@
             </div>
 
             <div class="col-item" style="background-color: #fff7ed; border: 2px solid #f97316;">
-                <span class="col-name" style="color: #c2410c;">J列（確定時間）</span>
+                <span class="col-name" style="color: #c2410c;">確定時間</span>
                 <strong>プルダウン（▼）</strong>から面接開始時間を選んでください。<br>
                 （例：14:00, 14:30...）
             </div>
             <div class="col-item">
-                <span class="col-name">K・L列（システム用）</span>
-                自動で「済」や「ID」が入ります。<br>
+                <span class="col-name">リマインド・LINE ID</span>
+                システムが使用します。<br>
                 <span class="important">絶対に削除・変更しないでください。</span>
             </div>
         </div>
@@ -213,7 +219,7 @@
             </tr>
             <tr>
                 <th>日時変更の場合</th>
-                <td>I列・J列を新しい日時に書き換えてください。（再送はされません）</td>
+                <td>「確定日」「確定時間」を新しい日時に書き換えてください。（再送はされません）</td>
             </tr>
         </table>
 
@@ -223,7 +229,7 @@
 
         <h3>Q. リマインドLINEが届かなかったと言われた</h3>
         <p>A. 以下の可能性があります。<br>
-        1. I列・J列の入力を忘れていた。<br>
+        1. 確定日時の入力を忘れていた。<br>
         2. 入力が直前（1時間前など）だったため、送信タイミングを過ぎていた。</p>
 
         <div class="footer">
